2004-03-16  Ted Gould <ted@gould.cx>

    * src/file.cpp,
      src/file.h,
      src/extension/Makefile.am,
      src/extension/extension.cpp,
      src/extension/extension.h,
      src/extension/menu.cpp,
      src/extension/system.cpp,
      src/extension/implementation/implementation.cpp,
      src/extension/implementation/implementation.h,
      src/extension/implementation/script.cpp,
      src/extension/implementation/script.h:
     A few of changes.
     1) removed the extensions menu stuff from the build as it seems
        no one is using it.
     2) Changing Filter to Effect internally to the extensions
     3) Adding an exception to the save and open extensions to
        signal a failure.  There is no way to test this currently,
        but it doesn't break anything.

2004-03-16  jon phillips <kidproto@users.sf.net>

    * share/icons/icons.svg: Added a couple of icons but haven't linked them 
      to the code yet.

    * share/tutorials/elementsofdesign.svg: Added the first part of the basic 
      graphics for this tutorial. I added boxes for the rest, which I need to 
      finish. I need to use Bulia's tutorial top part to keep the 
      tutorials consistent.


2004-03-16  bulia byak <bulia@users.sourceforge.net>

	* nr-type-directory.cpp: Cache NRTypeFaceDef *, not NRTypeFace *, fixes 916155 

	* src/arc-context.cpp src/arc-context.h src/event-context.h src/rect-context.cpp
	src/spiral-context.cpp src/spiral-context.h src/star-context.cpp
	src/star-context.h src/toolbox.cpp: John Cliff's patch #2 for shape tools,
	with my fixes
 
	* icons.svg: Tweaks: stroke to curve, flip/rotate, text 

	* src/sp-ellipse.cpp: Fixes: SPArc never writes <ellipse>; in d=, no L to the center when start==end
 
	* src/nodepath.cpp: Fix for 916119 

	* src/widgets/icon.cpp: Remove not-enough-room-for-icon warning
 
	* src/dialogs/text-edit.cpp src/dialogs/dialog-events.cpp: Do not eat key events in the text view
